--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -201,8 +201,7 @@ This will affect the concentration of permutation distribution of the estimated 
 Our intuition suggests that since more folds imply a less concentrated estimate, then leave-one-out should be the less conservative, and 2-fold should be the most conservative. 
 
 
-There are indeed many design choices when performing a permutation test using a cross validated statistic. 
-The subset of tests we will be comparing is collected for convenience in Table~\ref{tab:collected}.
+The of tests we will be comparing is collected for convenience in Table~\ref{tab:collected}.
 
 
 \begin{table}[th]
@@ -250,13 +249,14 @@ Another example is \textit{lda.noCV.1}, which is Fisher's LDA, returning the tra
 \section{Controlling the False Positive Rate}
 \label{sec:type_i}
 
-We start by verifying that the battery of tests in Table~\ref{tab:collected} control the false positive rate at the desired $0.05$ level, with varying conservativeness levels. 
-Figure~\ref{fig:simulation_1} demonstrates that this is indeed the case. 
-All our candidate tests control the type I error, with varying degrees of conservativeness. 
-In particular:
-(a) if the folds are balanced or not,
-(b) if the tuning parameters of some test statistic are varied,
-(d) if the number of folds is varied.
+Figure~\ref{fig:simulation_1} demonstrates that all of the tests considered conserve the desired $0.05$ false positive rate, up to varying levels of conservativism.
+This can be seen from the fact that the probability of rejection is no larger than $0.05$ in the abscense of any effect, encoded by a red circle. 
+This is true, in particular if:
+(a) the folds are balanced or not,
+(b) the tuning parameters of some test statistic are varied,
+(d) the number of folds is varied.
+We also observe that the most conservative tests are the accuracy tests that are not cross validated. 
+We return to this matter in the Discussion.
 
 
 
