--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -528,8 +528,7 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 \label{fig:n_folds_unbalanced}
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-  	  \missingfigure[figwidth=6cm]{TODO}
-%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 21:21:12"}
+	  \includegraphics[width=1\linewidth]{"art/2016-08-05 06:39:27"}
 	  \caption{2 Folds. Unalanced}  %TODO
 	\label{fig:n_folds_unbalanced_1}
 	\end{subfigure}%
@@ -552,14 +551,13 @@ Algorithm~\ref{algo:statistic} computes a region-wise test statistic, which is c
 	  \centering
 	  \includegraphics[width=1\linewidth]{"art/2016-07-30 10:33:05"}
 	  \caption{Scale Change.}  %TODO
-%	\label{fig:2016-07-2721:21:12}
+	\label{fig:scale_change}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \missingfigure[figwidth=6cm]{TODO}
-%	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+	  \includegraphics[width=1\linewidth]{"art/2016-08-04 19:32:17"}
 	  \caption{t Null} %TODO
-%	\label{fig:2016-07-2721:21:12}
+	\label{fig:t_null}
 	\end{subfigure}
 \end{figure}
 
