--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -414,7 +414,8 @@ We did not include this test in the battery we compared, but we note the followi
 
 
 \subsection{Non-linear predictors}
-
+It may be argued that accuracy tests permits the seperation between classes in high dimensions, such as in \emph{reproducing kernel Hilbert spaces} (RKHS) by using non-linear predictors.
+This is immaterial since group tests can also be performed in higher dimensions (see \cite{gretton_kernel_2012-1}).
 
 
 \subsection{Reservations}
