--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -421,16 +421,15 @@ This is immaterial since group tests can also be performed in higher dimensions 
 \subsection{Reservations}
 \label{sec:reservations}
 
-At this point some reservations to the generality of our findings are in order. 
+Some reservations to the generality of our findings are in order. 
 Firstly, not all accuracy tests are concerned with signal detection.
-Indeed, it is possible that the purpose of the test is not to detect a difference between classes, but to actually test is a particular classifier is better than chance. 
-This would be the case in decoding applications, like brain-machine interfaces, where the localization a signal is not enough. 
-Clinical diagnosis is another application, where the presence of a medical condition is ``predicted'' from imaging data. \citep[e.g.][]{olivetti_induction_2012,wager_fmri-based_2013}
+Indeed, it is possible that the purpose of the test is not to detect a difference between classes, but to actually test the performance of a particular classifier. 
+Examples include brain decoding for machine interfaces, and clinical diagnosis, where the presence of a medical condition is ``predicted'' from imaging data. \citep[e.g.][]{olivetti_induction_2012,wager_fmri-based_2013}
 
 Secondly, not all signals are manifested in a shift of the null distrubiton. 
-Put differently, the preferred alternative to an accuracy test is not always a location test. 
-Indeed, one may consider signal, i.e. effects, as a change in scale, such as the \emph{spiked covariance} model. In this case, other-than-Hotelling type tests are appropriate~[TODO: cite change in covariance alternative].
-Tests have been proposed even when the nature of the difference between populations is left unspecified \citep[e.g.][]{gretton_kernel_2012}.
+Our focus on location tests is misleading. Perhaps \cite{simon_pitfalls_2003}'s \emph{class comparison} is a more appropriate name, in that it does not only imply a shift alternative. 
+Indeed, one may consider signal, i.e. effects, as a change in scale, such as the \emph{spiked covariance} model. In this case, other-than-Hotelling type tests are appropriate \citep[e.g.][]{nadler_finite_2008}.
+Tests have been proposed even when the nature of the difference between populations is left unspecified \citep[e.g.][]{gretton_kernel_2012-1}.
 The fact that in our neuroimaging example (Section~\ref{sec:example}) some brain regions were detected with the accuracy test, and not the location test, is consistent with this observation. 
 On the other hand, the far greater power of the location test, certianly in our example, does serve as en empirical evidence that changes in location are a prevalent phenomenon. 
 [TODO: signal in scale? heavy tails?]
